infrastructure/vpc.tf
resource "aws_vpc" "production-vpc" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name = "Production-VPC"
  }
}
